Mon Mar  8 09:44:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL3_to_XMI/Bug_3607_Regression/*:
          new test for 3607

        * bin/ciao_tests.lst:
          Added new test and enabled other idl3_to_xmi tests for fuzz

Mon Mar  8 09:12:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_component_mpc.pl:
          Generate a seperate project for compiling the E.idl file, makes
          it easier for parallel builds and incredibuild

        * examples/Hello/Receiver/Receiver.mpc:
          Updated to use a seperate project for the E.idl file

        * MPC/config/cidlc.mpb:
          Added support for vc10

        * tools/Config_Handlers/XSCRT/Traversal.hpp:
          Removed commented out code

Mon Mar  8 08:31:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
        * MPC/config/ciao_cs_client.mpb:
          ciao_cs_client_svnt needs threads

Mon Mar  8 08:29:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
          Put the executables in CIAO_ROOT/bin, not ACE_ROOT/bin

        * MPC/config/taoidl3toidl2defaults.mpb:
        * tests/IDL3_to_XMI/XMI_For_Array/run_test.pl:
        * tests/IDL3_to_XMI/XMI_For_Included_File/run_test.pl:
        * tests/IDL3_to_XMI/XMI_For_Sequence/run_test.pl:
          updated because these executables are now put in CIAO_ROOT/bin

Mon Mar  8 08:19:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/Messenger.mpc:
          Removed not needed line

        * examples/DevGuideExamples/Messenger/Messenger_exec_i.h:
          Updated include

Sat Mar  7 15:40:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/Logger_Service.cpp
        * DAnCE/Starter/Starter.cpp
        * DAnCE/Starter/Starter.h